--- a/config/locales/errors.yml
+++ b/config/locales/errors.yml
@@ -2,5 +2,9 @@ pt-BR:
   error_messages:
     customer_not_found:
       code: 20101
-      title: "Cliente não encontrado"
-      detail: "Esse cliente não existe, ou foi deletado."
+      title: "Cliente não encontrado."
+      detail: "Esse cliente não existe ou foi deletado."
+    service_not_found:
+      code: 20102
+      title: "Serviço não encontrado."
+      detail: "Esse cliente não existe ou foi deletado."
