Ajustes nos testes da controller de serviços

--- a/config/locales/models/service/pt-BR.yml
+++ b/config/locales/models/service/pt-BR.yml
@@ -6,3 +6,5 @@ pt-BR:
           attributes:
             name:
               taken: 'Nome desse serviço já existente.'
+      messages:
+        record_invalid: 'Serviço inválido.'
