Ajusta serializers e docker

--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -79,3 +79,4 @@ pt-BR:
       required: 'não pode ficar em branco'
       blank: 'não pode ficar em branco'
       greater_than_or_equal_to: deve ser maior ou igual a %{count}
+      not_found: "não encontrado(a)"
