Crud de funcionarios + vinculo dos mesmos com servicos

--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -4,6 +4,7 @@ pt-BR:
     'Customer': 'Cliente '
     'Service': 'Serviço '
     'Scheduling': 'Agendamento '
+    'Employe': 'Funcionário '
   time:
     formats:
       default: ! '%a, %d de %B de %Y, %H:%M:%S %z'
